--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/nabula"]
-	path = themes/nabula
-	url = git@github.com:aakb/nebula.git
+[submodule "themes/nebula"]
+	path = themes/nebula
+	url = git@github.com:cableman/nebula.git
